--- a/sass/templates/_team.sass
+++ b/sass/templates/_team.sass
@@ -40,6 +40,8 @@
       text-align: center
       padding: 0
   &__row
+    margin: 0 auto
+    max-width: 73.3rem
     margin-bottom: 3.8rem
     justify-content: space-between
 .card
